# esp32_data_rw

./: .gitignore  CMakeLists.txt  README.md  partitions.csv
components/ble_cfg/: CMakeLists.txt  ble_cfg_service.c
components/ble_cfg/include/: ble_cfg_if.h
components/ble_system/: CMakeLists.txt  ble_button_control.c  ble_cfg_service.c  ble_ctrl_start_stop.c  ble_led_indicator.c  ble_system_manager.c
components/ble_system/include/: ble_button_if.h  ble_cfg_if.h  ble_ctrl_if.h  ble_led_if.h  ble_system_if.h
components/cfg_if/: CMakeLists.txt  cfg_if.c  cfg_nvs.c
components/cfg_if/include/: cfg_if.h
components/data_parser/: CMakeLists.txt  data_parser.c
components/data_parser/include/: data_parser.h
components/data_sender/: CMakeLists.txt  data_sender.c
components/data_sender/include/: data_sender.h
components/net_if/: CMakeLists.txt  ethernet_init.c  net_eth_service.c  net_eth_stub.c  net_gsm_stub.c  net_if.c  net_manager.c  net_wifi.c  wifi_init.c
components/net_if/include/: ethernet_init.h  net_eth_if.h  net_if.h  net_manager.h  wifi_init.h
components/parser/: CMakeLists.txt  parser_hex.c
components/parser/include/: parser_hex.h
components/serial_if/: CMakeLists.txt  serial_if.c  telemetry_service.c
components/serial_if/include/: serial_if.h  telemetry_service.h
components/spi_if/: CMakeLists.txt  spi_if.c
components/storage_if/: CMakeLists.txt  storage_spiffs.c
components/time_if/: CMakeLists.txt  time_if.c  time_sntp.c
main/: CMakeLists.txt  app_main.c  idf_component.yml  state_machine.c
main/include/: state_machine.h
(+5 files in other folders)
